Bug 450441 - Submenu of the context menu of window decoration tapped with a touch screen opens and closes immediately
Summary: Submenu of the context menu of window decoration tapped with a touch screen o...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-17 11:21 UTC by Patrick Silva
Modified: 2024-09-23 23:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-02-17 11:21:36 UTC
STEPS TO REPRODUCE
1. use Wayland session
2. open Dolphin
3. tap Dolphin icon in window decoration with a touchscreen
4. tap 'More actions' submenu with the touchscreen

OBSERVED RESULT
'More actions' submenu opens and closes immediately

EXPECTED RESULT
'More actions' submenu opens

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.24.80
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-07-27 22:10:51 UTC
Can confirm.
Comment 2 Patrick Silva 2023-11-18 19:40:04 UTC
Still an issue.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.81.0
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 3 Vlad Zahorodnii 2024-09-23 14:43:02 UTC
Git commit 1f89b7ca81b724f08fe346eda6c88dbac3466c99 by Vlad Zahorodnii.
Committed on 23/09/2024 at 14:31.
Pushed by vladz into branch 'master'.

Forward touch events using QWindowSystemInterface API

QWindowSystemInterface is a more appropriate api to send touch events.

M  +39   -45   autotests/integration/internal_window.cpp
M  +46   -25   src/input.cpp

https://invent.kde.org/plasma/kwin/-/commit/1f89b7ca81b724f08fe346eda6c88dbac3466c99
Comment 4 Vlad Zahorodnii 2024-09-23 23:07:00 UTC
Git commit 33efc38450f480d7bdaa6d7427c1dcc77a52d0ba by Vlad Zahorodnii.
Committed on 23/09/2024 at 19:08.
Pushed by vladz into branch 'Plasma/6.2'.

Forward touch events using QWindowSystemInterface API

QWindowSystemInterface is a more appropriate api to send touch events.
(cherry picked from commit 1f89b7ca81b724f08fe346eda6c88dbac3466c99)

M  +39   -45   autotests/integration/internal_window.cpp
M  +46   -25   src/input.cpp

https://invent.kde.org/plasma/kwin/-/commit/33efc38450f480d7bdaa6d7427c1dcc77a52d0ba