Forward touch events using QWindowSystemInterface API

QWindowSystemInterface is a more appropriate api to send touch events.

BUG: 450441
(cherry picked from commit 1f89b7ca81b724f08fe346eda6c88dbac3466c99)